create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/action-adult-athlete-259984-2000x1334.jpg);">
+<section class="engine"><a href="https://mobirise.me/z">best free html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/action-adult-athlete-259984-2000x1334.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -66,10 +66,10 @@
 
         <div class="container">
             <div class="row">
-                <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
+                <div class="mbr-section col-md-10">
 
                     <h1 class="mbr-section-title display-1">MEDHAA ENTERPRISES</h1>
-                    <p class="mbr-section-lead lead">Manufacturers of high quality contruction machinery and equipments. We are relied upon by professionals in the industry to provide the most complete range construction equipments ranging from Tower cranes to GI gratings. &nbsp;Medhaa Enterprises is known to offer personalized client service and high quality product solutions along with novel &amp; reliable logistics and delivery.</p>
+                    <p class="mbr-section-lead lead">Manufacturers of high quality contruction machinery and equipments. We are relied upon by best in the industry to provide the most complete range of construction equipments ranging from tower cranes to GI gratings. Medhaa Enterprises is known to offer personalized client service and high quality product solutions along with novel &amp; reliable logistics and delivery.</p>
                     <div class="mbr-section-btn"> <a class="btn btn-lg btn-secondary-outline btn-secondary" href="https://mobirise.com">CONTACT US</a></div>
                 </div>
             </div>
@@ -395,7 +395,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="tMh1hOj5+Rer6teWw4Y8ll6IHY1jIoBPvw+rixC1FFW1GDVkUP1f4sFY0t31zXTz05LoBO62fUfTm35uX+4y/doeg6BLMmxrQUTnsU7z2OGvpe5Za3uKfngDGmQS81dD" data-form-email="true">
+                        <input type="hidden" value="ZrG4zmesMa0EiU7rs3iQPSRbcABjgUEqSlHGppec8zMlcJOJUecdDa9PitufKk/NdEaeQD/IRaCONWtJdOdLY0pSh6SqfO+GrNdiDX0xsm7uJSoWMo4N3ceWZ8x4Svo9" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -457,7 +457,7 @@ Phone: +91 9710662160<br><br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-n" data-rv-view="76" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>Copyright (c) 2018 Medhaa Enterprises.</p>
+        <p>Copyright (c) 2018 Medhaa Enterprises.<br>Created by Vidhur.</p>
     </div>
 </footer>
 
